--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a class="book-appointment" href="#">Book Appointment</a>
     </article>
 
-    <div class="footer-wrapper">
+    <article class="footer-wrapper">
       <footer class="footer">
         <section class="footer__widget">
           <h3 class="footer__widget__tittle">Nuestra sucursal</h3>
@@ -53,7 +53,7 @@
           <p class="footer__widget__text">Lizzy@gmail.com</p>
         </section>
       </footer>
-    </div>
+    </article>
     
   </main>
 </body>
